# copilot-agent-test

./: .launch-agents.sh.swp  .watch-handoff.sh.swp  AGENTS.md  README.md  launch-agents.sh  reset-agent-workspace.sh  watch-handoff.sh
.copilot-workspace/: plan.md  requirements.md  review.md  status.json  tasks.md
.github/agents/: implementer.agent.md  planner.agent.md  reviewer.agent.md
.github/instructions/: implementer.instructions.md  planner.instructions.md  reviewer.instructions.md
reverse-pomodoro/: GUIDE.md  pyproject.toml  reverse-pomodoro.json
reverse-pomodoro/src/reverse_pomodoro/: __init__.py  __main__.py  cli.py  gui.py  log.py  minigame.py  session.py  timer.py
reverse-pomodoro/tests/: test_cli.py  test_gui.py  test_log.py  test_minigame.py  test_session.py  test_timer.py
sleeptimer/: README.md  pyproject.toml
sleeptimer/src/sleeptimer/: actions.py  gui.py  main.py  timer.py
sleeptimer/tests/: test_actions.py  test_gui.py  test_timer.py
sysmon/: README.md  pyproject.toml
sysmon/src/sysmon/: __init__.py  app.py  collector.py  theme.py  widgets.py
sysmon/tests/: test_collector.py  test_widgets.py
