[project]
name = "reverse-pomodoro"
version = "0.1.0"
description = "A reverse Pomodoro timer CLI — start small, build momentum"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
reverse-pomodoro = "reverse_pomodoro.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reverse_pomodoro"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
