[project]
name = "sysmon"
version = "0.1.0"
description = "A terminal-based system monitor with live stats, progress bars, and sparkline graphs."
requires-python = ">=3.10"
dependencies = [
    "textual>=3.0",
    "psutil>=5.9",
    "rich>=13.0",
]

[project.scripts]
sysmon = "sysmon.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sysmon"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "textual-dev",
]
